# Qwen3-TTS-DubFlow

./: .gitignore  .gitmodules  1  3  API.md  API_mini.md  README.md  README_zh.md
Qwen3-TTS/: .gitignore  MANIFEST.in  README.md  pyproject.toml
Qwen3-TTS/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
Qwen3-TTS/.github/workflows/: inactive.yaml  translate.yaml
Qwen3-TTS/examples/: test_model_12hz_base.py  test_model_12hz_custom_voice.py  test_model_12hz_voice_design.py  test_tokenizer_12hz.py
Qwen3-TTS/finetuning/: README.md  dataset.py  prepare_data.py  sft_12hz.py
backend/: .env.example  README.md  config.py  database.py  main.py  pyproject.toml
backend/database/: __init__.py  database.py  init_db.py
backend/models/: character.py  config.py  project.py  scriptline.py  task.py
backend/routers/: assets.py  characters.py  config.py  postfx.py  projects.py  scripts.py  tasks.py
backend/schemas/: bgm_asset.py  character.py  character_ref_asset.py  common.py  config.py  effect_asset.py  postfx.py  project.py  scriptline.py  task.py
backend/utils/: init_config.py
backend/workers/: analyze_characters.py  synthesis_voicedesign.py  worker.py
backend/workers/prompts/getroles/: en.prompt  ja.prompt  zh.prompt
backend/workers/prompts/scripts_slice/: en.prompt  ja.prompt  zh.prompt
docs/: README.md  branding-assets.md  client-desktop.md  client-web.md  model-license-policy.md  server-backend.md  tts-services.md
front_end/ai-dubbing/: index.html  package-lock.json  package.json
front_end/ai-dubbing/src/: App.jsx
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: backend.rs  main.rs
frontend/src/api/: client.js  endpoints.js
frontend/src/components/: CreateProjectModal.jsx  DesktopSidebar.jsx  ErrorBoundary.jsx  (+1 more)
models_deploy/: .dockerignore  .env.example  README.md  docker-compose.yml  entrypoint.sh
models_deploy/docker/: Dockerfile.meanaudio  Dockerfile.qwen
models_deploy/services/: __init__.py  audio_utils.py  meanaudio_api.py  qwen_voice_clone_api.py  qwen_voice_design_api.py  requirements-api.txt
test_scripts/: getroles.py  test.py  test_batch.py  test_online.py
(+11 files in other folders)
